# claude-code-daily

./: CONTRIBUTING.md  CREDITS.md  LICENSE  README.md
.github/workflows/: daily-update.yml  weekly-newsletter.yml
automation/: README.md  daily-update.py  draft.json  preview.html  weekly-newsletter.py
automation/cli/: Cargo.toml  README.md
automation/cli/src/: app.rs  config.rs  main.rs
automation/cli/src/api/: html.rs  mod.rs  tips.rs  waitlist.rs
automation/cli/src/ui/: draft.rs  mod.rs  preview.rs  stats.rs  tips.rs
docs/: CLI_DASHBOARD_PLAN.md
tips/: index.json
tips/categories/: context-management.md  orchestration.md  subagents.md  tooling.md  workflow.md
