[package]
name = "ccd-cli"
version = "0.1.0"
edition = "2021"
description = "Claude Code Daily Newsletter CLI Dashboard"
authors = ["Mustafa Sarac"]
license = "MIT"

[[bin]]
name = "ccd"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config & Paths
directories = "5"
dirs = "5"
chrono = "0.4"

# Error Handling
anyhow = "1"
thiserror = "2"

# Logging (optional, for debug)
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
strip = true
